--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <div><a href="views/Nuestras coders/index.html" target="_blank">Nuestras coders</a></div>
-  <div><a href="views/Applove/index.html" target="_blank">Applove</a></div>
+  <div><a href="views/AppLove-master/index.html" target="_blank">Applove</a></div>
 </body>
 </html>
